--- a/src/public/partials/contatos.html
+++ b/src/public/partials/contatos.html
@@ -6,7 +6,7 @@
 <button class="btn btn-primary" ng-click="incrementa()">Novo</button>
 <input ng-model="filtro" type="search" placeholder="parte do nome">
 
-<p>Contatos cadastrados: {{total}}</p>
+<p>Contatos cadastrados: {{contatos.length}}</p>
 
 <div class="table-responsive">
 	<table class="table table-hover">
