--- a/src/public/partials/contatos.html
+++ b/src/public/partials/contatos.html
@@ -18,7 +18,7 @@
 		<tr ng-repeat="contato in contatos | filter: filtro">
 			<td> <a>{{contato.nome}}</a> </td>
 			<td>{{contato.email}}</td>
-			<td class="text-center"><button class="btn btn-warning">Remover</buttom></td>
+			<td class="text-center"><button ng-click="remove(contato)" class="btn btn-warning">Remover</buttom></td>
 		</tr>
 
 
