--- a/src/public/partials/contatos.html
+++ b/src/public/partials/contatos.html
@@ -3,10 +3,13 @@
 	Bem-vindo ao Contatooh
 	</h1>
 </div>
-<button class="btn btn-primary" ng-click="incrementa()">Novo</button>
+<p ng-show="mensagem.texto">{{mensagem.texto}}</p>
+
+<a ng-href="#/contato" class="btn btn-primary">Novo Contato</a>
 <input ng-model="filtro" type="search" placeholder="parte do nome">
 
-<p>Contatos cadastrados: {{contatos.length}}</p>
+<p ng-show="contatos.length">Contatos cadastrados: {{contatos.length}}</p>
+<p class="text-info" ng-hide="contatos.length">Não há contatos cadastrados</p
 
 <div class="table-responsive">
 	<table class="table table-hover">
@@ -16,7 +19,7 @@
 			<th class="text-center">Ação</th>
 		</tr>
 		<tr ng-repeat="contato in contatos | filter: filtro">
-			<td> <a>{{contato.nome}}</a> </td>
+			<td><a ng-href="#/contato/{{contato._id}}">{{contato.nome}}</a> </td>
 			<td>{{contato.email}}</td>
 			<td class="text-center"><button ng-click="remove(contato)" class="btn btn-warning">Remover</buttom></td>
 		</tr>
