OAuth authentication up and running!

--- a/src/app/views/auth.ejs
+++ b/src/app/views/auth.ejs
@@ -10,6 +10,7 @@
 	</head>
 	<body>
 		<div class="container">
+			<p style="text-align:center;"><img src="images/logo.png"></p>
 			<a href="/auth/github">
 				<h1 class="text-center">Entre pelo GitHub</h1>
 			</a>
