--- a/src/app/views/auth.ejs
+++ b/src/app/views/auth.ejs
@@ -7,6 +7,12 @@
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.css">
 		<link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap-theme.css">
+		
+<style>
+	body {
+	    background-color: #c1c1a4;
+	}
+</style>		
 	</head>
 	<body>
 		<div class="container">
