--- a/src/app/views/index.ejs
+++ b/src/app/views/index.ejs
@@ -15,6 +15,11 @@
 
 		<link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.css">
 		<link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap-theme.css">
+		<style>
+			body {
+			    background-color: #c1c1a4;
+			}
+		</style>		
 
 		<title>Bem-vindo</title>
 	</head>
