--- a/src/app/views/404.ejs
+++ b/src/app/views/404.ejs
@@ -4,11 +4,11 @@
 		<title>Página não encontrada</title>
 		<meta name="viewport" content="width=device-width">
 		<meta charset="UTF-8">
+		<!-- build:css css/auth.min.css -->
 		<link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.css">
 		<link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap-theme.css">
-		<style>
-			body { background-color: #c1c1a4; }
-		</style>		
+		<!-- endbuild -->
+		<style>body { background-color: #c1c1a4; }</style>		
 	</head>
 	<body>
 		<div class="container">
