--- a/src/app/views/auth.ejs
+++ b/src/app/views/auth.ejs
@@ -5,14 +5,11 @@
 		<title>Autenticação do Usuário</title>
 		<meta name="viewport" content="width=device-width">
 		<meta charset="UTF-8">
+		<!-- build:css css/auth.min.css -->
 		<link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.css">
 		<link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap-theme.css">
-		
-<style>
-	body {
-	    background-color: #c1c1a4;
-	}
-</style>		
+		<!-- endbuild -->
+		<style>body { background-color: #c1c1a4; }</style>		
 	</head>
 	<body>
 		<div class="container">
