--- a/src/app/views/index.ejs
+++ b/src/app/views/index.ejs
@@ -4,17 +4,24 @@
 	<head>
 		<meta name="viewport" content="width=device-width">
 		<meta charset="UTF-8">
+
+		<!-- build:js js/index.min.js -->
 		<script src="vendor/angular/angular.js"></script>
 		<script src="vendor/angular-route/angular-route.js"></script>
 		<script src="vendor/angular-resource/angular-resource.js"></script>
+		<script src="vendor/angular-i18n/angular-locale_pt-br.js"></script>
 
 		<script src="js/main.js"></script>
 		<script src="js/services/ContatoService.js"></script>
 		<script src="js/controllers/ContatosController.js"></script>
 		<script src="js/controllers/ContatoController.js"></script>
+		<!-- endbuild -->
+		
 
+		<!-- build:css css/index.min.css -->
 		<link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.css">
 		<link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap-theme.css">
+		<!-- endbuild -->		
 		<style>
 			body {
 			    background-color: #c1c1a4;
