Adjustment in several files. Cleaning and test adjustments

--- a/src/app/views/auth.ejs
+++ b/src/app/views/auth.ejs
@@ -9,13 +9,13 @@
 		<link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.css">
 		<link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap-theme.css">
 		<!-- endbuild -->
-		<style>body { background-color: #c1c1a4; }</style>		
+		<style>body { background-color: #c1c1a4; }</style>
 	</head>
 	<body>
 		<div class="container">
 			<p style="text-align:center;"><img src="images/logo.png"></p>
 			<a href="/auth/github">
-				<h1 class="text-center">Entre pelo GitHub</h1>
+				<h1 id="entrar" class="text-center">Entre pelo GitHub</h1>
 			</a>
 		</div>
 	</body>
