Creating new AngularJS directives

--- a/src/app/views/index.ejs
+++ b/src/app/views/index.ejs
@@ -15,18 +15,19 @@
 		<script src="js/services/ContatoService.js"></script>
 		<script src="js/controllers/ContatosController.js"></script>
 		<script src="js/controllers/ContatoController.js"></script>
+		<script src="js/directives/meus-componentes/meus-componentes.js"></script>
 		<!-- endbuild -->
-		
+
 
 		<!-- build:css css/index.min.css -->
 		<link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.css">
 		<link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap-theme.css">
-		<!-- endbuild -->		
+		<!-- endbuild -->
 		<style>
 			body {
 			    background-color: #c1c1a4;
 			}
-		</style>		
+		</style>
 
 		<title>Bem-vindo</title>
 	</head>
