--- a/src/app/views/index.ejs
+++ b/src/app/views/index.ejs
@@ -29,7 +29,7 @@
 			}
 		</style>
 
-		<title>Bem-vindo</title>
+		<title>Bem-vindo <%=usuarioLogado %></title>
 	</head>
 	<body class="container">
 		<div class="text-right">
