--- a/src/public/partials/contato.html
+++ b/src/public/partials/contato.html
@@ -22,6 +22,6 @@
 	</div>
 	<div>
 		<button type="submit" class="btn btn-primary">Salvar</button>
-		<a href="#/" class="btn btn-default">Voltar</a>
+		<a id="botao-voltar" meu-focus evento="contatoSalvo" href="#/" class="btn btn-default">Voltar</a>
 	</div>
 </form>
